@@ -654,6 +654,7 @@ public class MergeManager implements FetchedInputAllocatorOrderedGrouped {
       synchronized (manager) {
 
         Iterator<MapOutput> it = inputs.iterator();
+        MapOutput lastAddedMapOutput = null;
         while(it.hasNext() && !Thread.currentThread().isInterrupted()) {
           MapOutput mo = it.next();
           if ((mergeOutputSize + mo.getSize() + manager.getUsedMemory()) > memoryLimit) {
@@ -672,6 +673,7 @@ public class MergeManager implements FetchedInputAllocatorOrderedGrouped {
                 mo.getAttemptIdentifier(), mo.getMemory(), 0, mo.getMemory().length);
             inMemorySegments.add(new Segment(reader, true,
                 (mo.isPrimaryMapOutput() ? mergedMapOutputsCounter : null)));
+            lastAddedMapOutput = mo;
             it.remove();
             LOG.debug("Added segment for merging. mergeOutputSize=" + mergeOutputSize);
           }
@@ -680,8 +682,12 @@ public class MergeManager implements FetchedInputAllocatorOrderedGrouped {
         //Add any unused MapOutput back
         inMemoryMapOutputs.addAll(inputs);
 
+        //Exit early, if 0 or 1 segment is available
         if (inMemorySegments.size() <= 1) {
-          return; //no need to proceed further.
+          if (lastAddedMapOutput != null) {
+            inMemoryMapOutputs.add(lastAddedMapOutput);
+          }
+          return;
         }
 
         mergedMapOutputs = unconditionalReserve(dummyMapId, mergeOutputSize, false);
